html-nginx-app/overlays/blue/nginx-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue         # <-- Updated service name to match Ingress backend
  namespace: nginx
  labels:
    app: nginx
    enabled: "true"
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
    color: blue                   # Select pods with label color=blue
    enabled: "true"
  type: LoadBalancer
