html-nginx-app/overlays/blue/patch-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
    color: blue
    enabled: "true"
